# ConfWare

./: README.md
python/: .pre-commit-config.yaml  README.md  prerequisite-requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
python/doc/source/: conf.py  index.rst
python/scripts/: build.ps1  ensure_conda.ps1
python/scripts/miniBuilders/: BuildCythonExt.ps1  BuildCythonWhl.ps1  BuildPoetryPy.ps1  BuildRustExt.ps1  build.py
