[metadata]
name = project
description = python Libraries
long_description = file: README.rst
long_description_content_type = text/x-rst
;url = https://docs.pytest.org/en/latest/
author = emia
license = None
license_file = LICENSE
;platforms = unix, linux, osx, cygwin, win32
platforms = win32
classifiers =
    Development Status :: 2 - Beta
    Intended Audience :: Developers
    License :: None
;    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
;    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Simulation
    Topic :: Utilities
keywords = simulation
;project_urls =
;    Changelog=https://docs.pytest.org/en/stable/changelog.html
;    Twitter=https://twitter.com/pytestdotorg
;    Source=https://github.com/pytest-dev/pytest
;    Tracker=https://github.com/pytest-dev/pytest/issues

[options]
packages =
    a
    b
    c
install_requires =
    attrs>=19.2.0
    colorama;sys_platform=="win32"
    tomli>=1.0.0;python_version<"3.11"
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools
    # setuptools-scm>=6.0
zip_safe = no

[options.entry_points]
console_scripts =
    mypro=a.console:run

[options.extras_require]
testing =
    argcomplete
    hypothesis>=3.56
    mock
    nose
    pygments>=2.7.2
    requests
    xmlschema

[options.package_data]
a = py.typed
b = py.typed

[build_sphinx]
source_dir = doc/en/
build_dir = doc/build
all_files = 1

;[check-manifest]
;ignore =
;    src/_pytest/_version.py

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
exclude = (?x)(
      ^template\.py$
    | examples/.+py$    # files named "one.py"
    | two\.pyi$  # or files ending with "two.pyi"
    | ^three\.   # or files starting with "three."
  )

[flake8]
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    history,
    test,
    build,
    dist,

max-line-length = 120
ignore = E203, W503
